--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,29 @@
 body {
-    margin: 0;
-    background: gray;
+    background: whitesmoke;
+    font-family: "Product Sans";
+}
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
+
+.profile {
+    width: 200px;
+    height: 200px;
+}
+
+.introText h2 {
+    font-size: 32px;
+}
+
+.highlight {
+    color: #3b82f6;
+}
+
+.introText p {
+    font-size: 10px;
+}
+
