--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,12 @@ body {
 }
 
 .intro {
+    width: 800px;
+    height: 400px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 40px;
     margin-top: 160px;
     padding: 0 20px;
