--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: white;
+    background: grey;
     font-family: 'Trebuchet MS', sans-serif;
     width:1200px;
     height:700px;
@@ -14,6 +14,7 @@ body {
     align-items: center;
     gap: 40px;
     margin: 160px;
+    background: white;
 }
 
 .profile {
