--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
-    background: grey;
+    background: white;
     font-family: 'Trebuchet MS', sans-serif;
     width:1200px;
     height:700px;
 }
 
 .intro {
-    width: 800px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
