Attempt to fix layout

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     align-items: center;
     gap: 40px;
     margin: 160px;
-    background: white;
+    background: grey;
 }
 
 .profile {
