Attempt to fix layout

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 40px;
+    padding: 0px 40px;
 }
 
 .name h1 {
