--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 html, body {
     width:100%;
     height:100%;
-    display: flex;
-    flex-direction: column;
+    margin: 0;
+    padding: 0;
     background: white;
     font-family: 'Trebuchet MS', sans-serif;
     overflow: hidden;
@@ -26,14 +26,18 @@ body {
 
 .menu {
     display: flex;
-    gap: 20px;
+    gap: 40px;
 }
 
 .menu a {
     font-size: 20px;
 }
 
-.menu a.activeA, a.activeB, a.activeC, a.activeD, .menu a:hover {
+.menu a.activeA, 
+.menu a.activeB, 
+.menu a.activeC, 
+.menu a.activeD, 
+.menu a:hover {
     color:blue;
 }
 
