--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,21 @@
-html, body {
-    width:100%;
-    height:100%;
-    margin: 0;
-    padding: 0;
-    background: white;
-    font-family: 'Trebuchet MS', sans-serif;
-    overflow: hidden;
-}
-
 body {
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
 }
 
 .navbar {
+    width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
+    position: absolute;
+    top: 0;
 }
 
 .name h1 {
@@ -51,6 +49,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 40px;
+    margin-top: 80px;
 }
 
 .profile {
