--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: white;
     overflow: hidden;
 }
@@ -15,7 +13,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
-    position: absolute;
     top: 0;
 }
 
@@ -45,6 +42,7 @@ body {
 }
 
 .intro {
+    flex: 1;
     display: flex;
     flex-direction: row;
     justify-content: center;
