--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
+    position: absolute;
     top: 0;
 }
 
@@ -51,19 +52,19 @@ body {
 }
 
 .profile {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .introText h1 {
-    font-size: 40px;
+    font-size: 60px;
     text-align: left;
 }
 
 .introText p {
-    font-size: 20px;
+    font-size: 40px;
     text-align: left;
 }
 
