--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     height: 100vh;
     width: 100vw;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -14,8 +16,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
-    position: absolute;
-    top: 0;
 }
 
 .name h1 {
@@ -65,7 +65,7 @@ body {
 }
 
 .introText p {
-    font-size: 40px;
+    font-size: 30px;
     text-align: left;
 }
 
