--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 40px;
+    margin: 10px;
+    padding: 10px;
 }
 
 .name h1 {
