--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,8 @@ body {
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    margin: 10px;
-    padding: 10px;
 }
 
 .name h1 {
@@ -50,7 +48,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 80px;
 }
 
 .profile {
