--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
     overflow: hidden;
 }
 
+/* Menu Bar */
+
 .navbar {
     width: 100%;
     height: 80px;
@@ -31,10 +33,12 @@ body {
     font-size: 20px;
 }
 
-.menu a.activeA, 
-.menu a.activeB, 
-.menu a.activeC, 
-.menu a.activeD, 
+.menu a.activeHome, 
+.menu a.activePersonal, 
+.menu a.activeInterest, 
+.menu a.activeMore{
+    color:black;
+}
 .menu a:hover {
     color:blue;
 }
@@ -42,6 +46,8 @@ body {
 .location p{
     font-size: 30px;
 }
+
+/* Main body */
 
 .intro {
     flex: 1;
@@ -69,3 +75,50 @@ body {
     text-align: left;
 }
 
+
+/* Contact Bar */
+
+.contacts {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.contacts h1{
+    font-size: 30px;
+    text-align: center;
+}
+
+.contactExternals {
+    width: 80%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contactExternals a.cell,
+.contactExternals a.email,
+.contactExternals a.linkedin {
+    color:black;
+}
+.contactExternals a:hover {
+    color:blue;
+}
+
+.iconGmail {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;  
+}
+
+.iconLinkedin {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
