--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     background-color: white;
     overflow: hidden;
+    font-family: 'Overlock';
 }
 
 /* Menu Bar */
