--- a/stylesAboutMe.css
+++ b/stylesAboutMe.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: white;
+    font-family: 'Overlock';
 }
 
 /* Menu Bar */
