--- a/stylesCompetitions.css
+++ b/stylesCompetitions.css
@@ -35,7 +35,7 @@ body {
     color: black;
 }
 .menu a:hover {
-    color:blue;
+    text-decoration: underline;
 }
 
 .dropdownPerson,
@@ -45,10 +45,10 @@ body {
 }
 
 .activePerson:hover {
-    color: blue;
+    text-decoration: underline;
 }
 .activeInterest:hover {
-    color: blue;
+    text-decoration: underline;
 }
 
 .dropdownPerson:hover .dropdownPersonContent {
@@ -76,13 +76,13 @@ body {
 }
 
 .dropdownPersonContent a {
-    padding: 5px;
+    padding: 5px 10px;
     border: 2px solid black;
     border-radius: 30px;
 }
 
 .dropdownInterestContent a {
-    padding: 5px;
+    padding: 5px 10px;
     border: 2px solid black;
     border-radius: 30px;
 }
