--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     background-color: white;
     overflow: hidden;
+    font-family: 'Overlock';
 }
 
 /* Menu Bar */
@@ -35,7 +36,7 @@ body {
     color: black;
 }
 .menu a:hover {
-    color:blue;
+    text-decoration: underline;
 }
 
 .dropdownPerson,
@@ -45,10 +46,10 @@ body {
 }
 
 .activePerson:hover {
-    color: blue;
+    text-decoration: underline;
 }
 .activeInterest:hover {
-    color: blue;
+    text-decoration: underline;
 }
 
 .dropdownPerson:hover .dropdownPersonContent {
@@ -76,13 +77,13 @@ body {
 }
 
 .dropdownPersonContent a {
-    padding: 5px;
+    padding: 5px 10px;
     border: 2px solid black;
     border-radius: 30px;
 }
 
 .dropdownInterestContent a {
-    padding: 5px;
+    padding: 5px 10px;
     border: 2px solid black;
     border-radius: 30px;
 }
