--- a/styles.css
+++ b/styles.css
@@ -152,5 +152,6 @@ body {
 .iconLinkedin {
     width: 80px;
     height: 80px;
-    border-radius: 50%;  
+    border-radius: 50%;
+    object-fit: cover;
 }
