--- a/styles.css
+++ b/styles.css
@@ -124,8 +124,6 @@ body {
 /* Contact Bar */
 
 .contacts {
-    width: 100%;
-    height: 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -134,12 +132,11 @@ body {
 }
 
 .contactExternals {
-    width: 40%;
-    height: 60px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 80px;
 }
 
 .iconPhone,
