Add all necessary content to Photography page

--- a/stylesPhotography.css
+++ b/stylesPhotography.css
@@ -90,3 +90,119 @@ body {
 .location h1{
     font-size: 30px;
 }
+
+/* Main Body */
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+}
+
+.headerContent h1 {
+    font-size: 40px;
+}
+
+.headerContent h2 {
+    font-size: 22px;
+    margin-bottom: 0.1em;
+}
+
+.headerContent p {
+    font-size: 18px;
+    margin-top: 0.1em;
+}
+
+.iconGoogleDrivePhotography {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.heroContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    padding: 40px;
+}
+
+.heroContent h2 {
+    font-size: 22px;
+}
+
+.leftHero h2,
+.rightHero h2,
+.leftHero img,
+.rightHero img {
+    margin: 0;
+}
+
+.leftHero,
+.rightHero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.leftHeroOne,
+.leftHeroTwo,
+.rightHeroOne,
+.rightHeroTwo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.leftHero img,
+.rightHero img,
+.heroContent img {
+    margin-top: 0.1em;
+}
+
+.sunsetPhoto,
+.torontoPhoto {
+    height: 300px;
+    width: 400px;
+    border-radius: 5%;
+    cursor: zoom-in;
+}
+
+.zhangjiajiePhoto,
+.yongshunPhoto {
+    height: 400px;
+    width: 300px;
+    border-radius: 5%;
+    cursor: zoom-in;
+}
+
+.sunsetPhoto.zoomed,
+.torontoPhoto.zoomed {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(2.5);
+    cursor: zoom-out;
+}
+
+.zhangjiajiePhoto.zoomed,
+.yongshunPhoto.zoomed {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(2);
+    cursor: zoom-out;
+}
