Fix typo in code

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 
 .dropdownPerson,
 .dropdownInterest {
-    position: relavtive;
+    position: relative;
     display: inline-block;
 }
 
