--- a/styles.css
+++ b/styles.css
@@ -147,4 +147,12 @@ body {
     width: 80px;
     height: 80px;
     border-radius: 50%;  
+    transition: transform 0.3s ease;
+}
+
+.iconPhone:hover,
+.iconEmail:hover,
+.iconLinkedin:hover,
+.iconGithub:hover {
+    transform: scale(1.1);
 }
