--- a/stylesAboutMe.css
+++ b/stylesAboutMe.css
@@ -223,4 +223,15 @@ body {
     width: 80px;
     height: 80px;
     border-radius: 50%;  
+    transition: transform 0.3s ease;
+}
+
+.iconPhone:hover,
+.iconEmail:hover,
+.iconLinkedin:hover,
+.iconGithub:hover,
+.iconYoutube:hover,
+.iconChess:hover,
+.iconResume:hover {
+    transform: scale(1.1);
 }
