Add auto-dark to pages

--- a/PersonalWeb/stylesChess.css
+++ b/PersonalWeb/stylesChess.css
@@ -18,6 +18,7 @@
     }
 }
 
+html.dark-theme,
 body.dark-theme {
     --bg: #0f1115;
     --text: #e6e6e6;
@@ -26,6 +27,7 @@ body.dark-theme {
     --img-border: #ffffff;
 }
 
+html.light-theme,
 body.light-theme {
     --bg: #ffffff;
     --text: #000000;
@@ -272,7 +274,16 @@ img:not(.iconChessChess):not(.magIcon):not(.iconTheme) {
     background-clip: padding-box;
 }
 
+/* Dark mode: lighten inline blue text only */
+html.dark-theme [style*="color: blue"],
+body.dark-theme [style*="color: blue"] {
+    color: #8ab4f8 !important;
+}
+
 /* Invert icons in dark mode */
+html.dark-theme .iconChessChess,
+html.dark-theme .magIcon,
+html.dark-theme .iconTheme,
 body.dark-theme .iconChessChess,
 body.dark-theme .magIcon,
 body.dark-theme .iconTheme {
