--- a/PersonalWeb/stylesProjects.css
+++ b/PersonalWeb/stylesProjects.css
@@ -18,6 +18,7 @@
     }
 }
 
+html.dark-theme,
 body.dark-theme {
     --bg: #0f1115;
     --text: #e6e6e6;
@@ -26,6 +27,7 @@ body.dark-theme {
     --img-border: #ffffff;
 }
 
+html.light-theme,
 body.light-theme {
     --bg: #ffffff;
     --text: #000000;
@@ -166,6 +168,12 @@ body {
     display: block;
 }
 
+/* Dark mode: lighten inline blue text only */
+html.dark-theme [style*="color: blue"],
+body.dark-theme [style*="color: blue"] {
+    color: #8ab4f8 !important;
+}
+
 img:not(.iconGithubRepoDiscord):not(.iconGithubRepoApp):not(.iconTheme) {
     background-color: var(--bg);
     background-clip: padding-box;
@@ -178,6 +186,9 @@ img:not(.iconGithubRepoDiscord):not(.iconGithubRepoApp):not(.iconTheme) {
 }
 
 /* Improve visibility of black icons in dark mode */
+html.dark-theme .iconGithubRepoDiscord,
+html.dark-theme .iconGithubRepoApp,
+html.dark-theme .iconTheme,
 body.dark-theme .iconGithubRepoDiscord,
 body.dark-theme .iconGithubRepoApp,
 body.dark-theme .iconTheme {
